feat: initialize blog project with Vite, React, and TypeScript
- Add package.json with dependencies and scripts for development and build.
- Create build and fetch scripts to handle content generation and fetching from Nextcloud.
- Implement atomic directory replacement for safe content updates.
- Develop markdown tree downloader for fetching posts from WebDAV.
- Generate content from markdown files and create an index for posts.
- Set up basic HTML structure for home and post pages.
- Create HomePage and PostPage components with routing and content fetching.
- Establish shared AppShell component for consistent layout across pages.
- Add global styles and configure TypeScript for the project.
- Configure Vite for building and serving the application.

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@ web_modules/
 .env.*
 !.env.example
 
+# Local tmp
+.tmp
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -81,12 +84,20 @@ out
 # Nuxt.js build / generate output
 .nuxt
 dist
+dist.__tmp__
+dist.__backup__
 
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
+
+# Generated blog content & fetched sources
+public/content
+posts
+posts.__tmp__
+posts.__backup__
 
 # vuepress build output
 .vuepress/dist
