feat: Add CI/CD configuration and testing documentation
- Introduced a comprehensive CI/CD configuration using GitHub Actions to enforce quality checks, testing, and build validation.
- Documented the CI workflow, including triggers, quality gates, and local simulation instructions.
- Added a testing guide detailing the usage of Vitest, including running tests, structure, and coverage reporting.
- Implemented ESLint configuration with TypeScript and React support, including custom rules and ignored files.
- Developed unit tests for validators, atomic directory replacement, and content generation, ensuring robust functionality.
- Enhanced the validators with error handling and conversion functions for ISO date strings and optional strings/arrays.
- Configured Vitest for testing environment and coverage reporting.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite --config vite.config.ts",
     "fetch": "node --import tsx scripts/fetch.ts",
     "build": "node --import tsx scripts/build.ts",
-    "preview": "vite preview --config vite.config.ts"
+    "preview": "vite preview --config vite.config.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
   },
   "engines": {
     "node": ">=18.19.0"
@@ -22,12 +30,23 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitest/ui": "^4.0.15",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jsdoc": "^61.5.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "fast-xml-parser": "^4.4.0",
     "gray-matter": "^4.0.3",
+    "prettier": "^3.7.4",
     "sass": "^1.77.6",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vitest": "^4.0.15"
   }
 }
