--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,5 @@
     "strict": true,
     "types": ["vite/client", "node"]
   },
-  "include": ["src", "scripts", "vite.config.ts"]
+  "include": ["src", "scripts", "vite.config.ts", "vitest.config.ts"]
 }
-
