feat: Enhance HomePage and PostPage with new layout and features
- Refactored HomePage to include a hero section and a grid for latest posts.
- Implemented a custom hook to fetch and display the latest posts.
- Added loading and empty states for better user experience.
- Created a new PostPage layout with a sticky Table of Contents and improved styling.
- Introduced MarkdownRenderer for rendering post content with syntax highlighting.
- Added a Footer component with statistics and备案信息.
- Implemented responsive design adjustments across components.
- Enhanced contentApi to strip Front Matter from markdown files.
- Added utility functions for date formatting and TOC extraction.
- Updated SCSS styles for better visual consistency and responsiveness.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,13 @@ NEXTCLOUD_APP_PASSWORD=<app-password>
 # Optional: override directories
 # NEXTCLOUD_POSTS_SUBDIR=posts/ # set empty to use blog root
 # LOCAL_POSTS_DIR=posts
+
+# Site configuration (VITE_ prefix makes them available in browser)
+VITE_SITE_NAME=Max Zhang
+VITE_COPYRIGHT_YEAR=2024
+
+# Beian (备案) configuration
+VITE_ICP_NUMBER=ICP备XXXXXXXXXXXXXX号-1
+VITE_ICP_URL=https://beian.miit.gov.cn/
+VITE_BEIAN_NUMBER=网安备XXXXXXXXXXXXXXXX号
+VITE_BEIAN_URL=http://www.beian.gov.cn/portal/registerSystemInfo
