feat: remove development plan document and update related references
refactor: update PRD to clarify posts directory usage in Nextcloud

fix: change testing documentation to reflect content directory checks

chore: update ESLint config to ignore content directory instead of posts

feat: add deploy script for deploying to remote server using rsync

feat: implement fetch script to download posts from Nextcloud to content directory

refactor: update content generation logic to use content directory

feat: create PostsPage component to display list of articles

feat: add main entry point for PostsPage

feat: create HTML template for posts listing page

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NEXTCLOUD_APP_PASSWORD=<app-password>
 
 # Optional: override directories
 # NEXTCLOUD_POSTS_SUBDIR=posts/ # set empty to use blog root
-# LOCAL_POSTS_DIR=posts
+# LOCAL_POSTS_DIR=content
 
 # Site configuration (VITE_ prefix makes them available in browser)
 VITE_SITE_NAME=Max Zhang
@@ -16,3 +16,10 @@ VITE_ICP_NUMBER=ICP备XXXXXXXXXXXXXX号-1
 VITE_ICP_URL=https://beian.miit.gov.cn/
 VITE_BEIAN_NUMBER=网安备XXXXXXXXXXXXXXXX号
 VITE_BEIAN_URL=http://www.beian.gov.cn/portal/registerSystemInfo
+
+# Deployment configuration for `npm run deploy`
+DEPLOY_HOST=your-server.com              # 服务器地址或 IP
+DEPLOY_USER=www-data                     # SSH 用户名
+DEPLOY_PATH=/var/www/html/blog           # 服务器上的目标路径
+DEPLOY_PORT=22                           # SSH 端口（默认 22）
+# DEPLOY_SSH_KEY_PATH=/path/to/ssh/key  # 可选：SSH 私钥路径（不设置则使用默认密钥）
