feat: add SFTP deployment functionality and update environment configuration

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,10 @@ DEPLOY_HOST=your-server.com              # 服务器地址或 IP
 DEPLOY_USER=www-data                     # SSH 用户名
 DEPLOY_PATH=/var/www/html/blog           # 服务器上的目标路径
 DEPLOY_PORT=22                           # SSH 端口（默认 22）
-# DEPLOY_SSH_KEY_PATH=/path/to/ssh/key  # 可选：SSH 私钥路径（不设置则使用默认密钥）
+
+# 认证方式（三选一）：
+# 1. 使用默认 SSH 密钥（推荐，~/.ssh/id_ed25519 或 ~/.ssh/id_rsa）
+# 2. 指定 SSH 密钥路径：
+# DEPLOY_SSH_KEY_PATH=/path/to/ssh/key
+# 3. 使用密码（不推荐，明文存储）：
+# DEPLOY_PASSWORD=your_password
