--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "prettier": "^3.7.4",
     "sass": "^1.77.6",
     "sass-embedded": "^1.96.0",
+    "ssh2-sftp-client": "^12.0.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.4",
